/*
 * $Id: ChangeLog,v 1.323 2002/07/24 18:41:31 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2002-07-25 11:18 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/common/expropt1.c
    ! Fixed memory leak in optimization of empty array.

2002-07-24 11:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * doc/cstruct.txt
  * include/cstruct.ch
    * Added: IMPORT C STRUCTURE <strucName>. This allows usage of structures from a separately compiled modules.

2002-07-25 11:45 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/transfrm.c
    ! Fix minor bug in declaration of var.

    Reported by Ron Pinkas

2002-07-23 20:21 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrayshb.c
  * source/vm/classes.c
    ! Corrected few compiler warnings.

2002-07-23 19:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
  * source/vm/dynsym.c
    * Changed hb_dynsymEval( PHB_DYNS_FUNC pFunction, void * Cargo ) to return USHORT position of last scanned symbol.
    + PHB_DYNS hb_dynsymFindFromFunction( PHB_FUNC pFunc ); /* returns a dynamic symbol for a given function pointer. */
    + PHB_DYNS hb_dynsymPos( USHORT uiPos ); /* returns a dynamic symbol from a position index. */

  * source/vm/classes.c
    + PHB_DYNS hb_clsSymbolFromFunction( PHB_ITEM pObject, PHB_FUNC pFunction )
    + HB_ObjMsgPtr( oObj, cMessage ) -> nFuncPointer

  * source/vm/hvm.c
    + HB_Exec( nFuncPointer [, oSelf] [, xParam1 ] [, xParamN ] ... )

  + tests/testexec.prg
    + New test to demonstrate HB_FuncPtr(), HB_ObjMsgPtr(), HB_Exec()

2002-07-23 11:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexprb.c
    ! Fixed memory leak in macro compiler related to optimizations of SubStr(), Right(), and aTail().

2002-07-23 10:35 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/cstruct.prg